Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AirControl_GET(UCharacterMovementComponent* Ptr) { return Ptr->AirControl; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AirControl_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AirControl = Value; }
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysNavWalking(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PhysNavWalking_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysSwimming(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PhysSwimming_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysWalking(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PhysWalking_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ProcessLanded(UCharacterMovementComponent* Self, INT_PTR Hit, float remainingTime, int32 Iterations)
	{
		auto& _p0 = *(FHitResult*)Hit;
		auto _p1 = remainingTime;
		auto _p2 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ProcessLanded_WRAP(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ProjectLocationFromNavMesh(UCharacterMovementComponent* Self, float DeltaSeconds, INT_PTR CurrentFeetLocation, INT_PTR TargetNavLocation, float UpOffset, float DownOffset)
	{
		auto _p0 = DeltaSeconds;
		auto& _p1 = *(FVector*)CurrentFeetLocation;
		auto& _p2 = *(FVector*)TargetNavLocation;
		auto _p3 = UpOffset;
		auto _p4 = DownOffset;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ProjectLocationFromNavMesh_WRAP(_p0, _p1, _p2, _p3, _p4));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RemoveRootMotionSource(UCharacterMovementComponent* Self, char* InstanceName)
	{
		auto _p0 = ConvertFromManage_FName(InstanceName);
		Self->RemoveRootMotionSource(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ReplicateMoveToServer(UCharacterMovementComponent* Self, float DeltaTime, INT_PTR NewAcceleration)
	{
		auto _p0 = DeltaTime;
		auto& _p1 = *(FVector*)NewAcceleration;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ReplicateMoveToServer_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RevertMove(UCharacterMovementComponent* Self, INT_PTR OldLocation, UPrimitiveComponent* OldBase, INT_PTR InOldBaseLocation, INT_PTR OldFloor, bool bFailMove)
	{
		auto& _p0 = *(FVector*)OldLocation;
		auto _p1 = OldBase;
		auto& _p2 = *(FVector*)InOldBaseLocation;
		auto& _p3 = *(FFindFloorResult*)OldFloor;
		auto _p4 = bFailMove;
		Self->RevertMove(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RoundAcceleration(UCharacterMovementComponent* Self, INT_PTR InAccel)
	{
		auto _p0 = *(FVector*)InAccel;
		return (INT_PTR) new FVector(Self->RoundAcceleration(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SaveBaseLocation(UCharacterMovementComponent* Self)
	{
		Self->SaveBaseLocation();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ScaleInputAcceleration(UCharacterMovementComponent* Self, INT_PTR InputAcceleration)
	{
		auto& _p0 = *(FVector*)InputAcceleration;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ScaleInputAcceleration_WRAP(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ServerCheckClientError(UCharacterMovementComponent* Self, float ClientTimeStamp, float DeltaTime, INT_PTR Accel, INT_PTR ClientWorldLocation, INT_PTR RelativeClientLocation, UPrimitiveComponent* ClientMovementBase, char* ClientBaseBoneName, uint8 ClientMovementMode)
	{
		auto _p0 = ClientTimeStamp;
		auto _p1 = DeltaTime;
		auto& _p2 = *(FVector*)Accel;
		auto& _p3 = *(FVector*)ClientWorldLocation;
		auto& _p4 = *(FVector*)RelativeClientLocation;
		auto _p5 = ClientMovementBase;
		auto _p6 = ConvertFromManage_FName(ClientBaseBoneName);
		auto _p7 = ClientMovementMode;
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ServerCheckClientError_WRAP(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ServerMoveHandleClientError(UCharacterMovementComponent* Self, float ClientTimeStamp, float DeltaTime, INT_PTR Accel, INT_PTR RelativeClientLocation, UPrimitiveComponent* ClientMovementBase, char* ClientBaseBoneName, uint8 ClientMovementMode)
	{
		auto _p0 = ClientTimeStamp;
		auto _p1 = DeltaTime;
		auto& _p2 = *(FVector*)Accel;
		auto& _p3 = *(FVector*)RelativeClientLocation;
		auto _p4 = ClientMovementBase;
		auto _p5 = ConvertFromManage_FName(ClientBaseBoneName);
		auto _p6 = ClientMovementMode;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ServerMoveHandleClientError_WRAP(_p0, _p1, _p2, _p3, _p4, _p5, _p6);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetAvoidanceEnabled(UCharacterMovementComponent* Self, bool bEnable)
	{
		auto _p0 = bEnable;
		Self->SetAvoidanceEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetAvoidanceGroup(UCharacterMovementComponent* Self, int32 GroupFlags)
	{
		auto _p0 = GroupFlags;
		Self->SetAvoidanceGroup(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetBase(UCharacterMovementComponent* Self, UPrimitiveComponent* NewBase, char* BoneName, bool bNotifyActor)
	{
		auto _p0 = NewBase;
		auto _p1 = ConvertFromManage_FName(BoneName);
		auto _p2 = bNotifyActor;
		Self->SetBase(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetBaseFromFloor(UCharacterMovementComponent* Self, INT_PTR FloorResult)
	{
		auto& _p0 = *(FFindFloorResult*)FloorResult;
		Self->SetBaseFromFloor(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetDefaultMovementMode(UCharacterMovementComponent* Self)
	{
		Self->SetDefaultMovementMode();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetGroundMovementMode(UCharacterMovementComponent* Self, EMovementMode NewGroundMovementMode)
	{
		auto _p0 = NewGroundMovementMode;
		Self->SetGroundMovementMode(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetGroupsToAvoid(UCharacterMovementComponent* Self, int32 GroupFlags)
	{
		auto _p0 = GroupFlags;
		Self->SetGroupsToAvoid(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetGroupsToIgnore(UCharacterMovementComponent* Self, int32 GroupFlags)
	{
		auto _p0 = GroupFlags;
		Self->SetGroupsToIgnore(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetMovementMode(UCharacterMovementComponent* Self, EMovementMode NewMovementMode, uint8 NewCustomMode)
	{
		auto _p0 = NewMovementMode;
		auto _p1 = NewCustomMode;
		Self->SetMovementMode(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetNavWalkingPhysics(UCharacterMovementComponent* Self, bool bEnable)
	{
		auto _p0 = bEnable;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SetNavWalkingPhysics_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetPostLandedPhysics(UCharacterMovementComponent* Self, INT_PTR Hit)
	{
		auto& _p0 = *(FHitResult*)Hit;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SetPostLandedPhysics_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetWalkableFloorAngle(UCharacterMovementComponent* Self, float InWalkableFloorAngle)
	{
		auto _p0 = InWalkableFloorAngle;
		Self->SetWalkableFloorAngle(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetWalkableFloorZ(UCharacterMovementComponent* Self, float InWalkableFloorZ)
	{
		auto _p0 = InWalkableFloorZ;
		Self->SetWalkableFloorZ(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCancelAdaptiveReplication(UCharacterMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ShouldCancelAdaptiveReplication_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCatchAir(UCharacterMovementComponent* Self, INT_PTR OldFloor, INT_PTR NewFloor)
	{
		auto& _p0 = *(FFindFloorResult*)OldFloor;
		auto& _p1 = *(FFindFloorResult*)NewFloor;
		return Self->ShouldCatchAir(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCheckForValidLandingSpot(UCharacterMovementComponent* Self, float DeltaTime, INT_PTR Delta, INT_PTR Hit)
	{
		auto _p0 = DeltaTime;
		auto& _p1 = *(FVector*)Delta;
		auto& _p2 = *(FHitResult*)Hit;
		return Self->ShouldCheckForValidLandingSpot(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldComputePerchResult(UCharacterMovementComponent* Self, INT_PTR InHit, bool bCheckRadius)
	{
		auto& _p0 = *(FHitResult*)InHit;
		auto _p1 = bCheckRadius;
		return Self->ShouldComputePerchResult(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldJumpOutOfWater(UCharacterMovementComponent* Self, INT_PTR JumpDir)
	{
		auto& _p0 = *(FVector*)JumpDir;
		return Self->ShouldJumpOutOfWater(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldRemainVertical(UCharacterMovementComponent* Self)
	{
		return Self->ShouldRemainVertical();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SimulatedTick(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SimulatedTick_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SimulateMovement(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SimulateMovement_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition_Interpolate(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_Interpolate_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SmoothClientPosition_UpdateVisuals(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SmoothClientPosition_UpdateVisuals_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartFalling(UCharacterMovementComponent* Self, int32 Iterations, float remainingTime, float timeTick, INT_PTR Delta, INT_PTR subLoc)
	{
		auto _p0 = Iterations;
		auto _p1 = remainingTime;
		auto _p2 = timeTick;
		auto& _p3 = *(FVector*)Delta;
		auto& _p4 = *(FVector*)subLoc;
		Self->StartFalling(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartNewPhysics(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		Self->StartNewPhysics(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_StartSwimming(UCharacterMovementComponent* Self, INT_PTR OldLocation, INT_PTR OldVelocity, float timeTick, float remainingTime, int32 Iterations)
	{
		auto _p0 = *(FVector*)OldLocation;
		auto _p1 = *(FVector*)OldVelocity;
		auto _p2 = timeTick;
		auto _p3 = remainingTime;
		auto _p4 = Iterations;
		Self->StartSwimming(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Swim(UCharacterMovementComponent* Self, INT_PTR Delta, INT_PTR Hit)
	{
		auto _p0 = *(FVector*)Delta;
		auto& _p1 = *(FHitResult*)Hit;
		return Self->Swim(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_TickCharacterPose(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->TickCharacterPose_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_TryToLeaveNavWalking(UCharacterMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->TryToLeaveNavWalking_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UnCrouch(UCharacterMovementComponent* Self, bool bClientSimulation)
	{
		auto _p0 = bClientSimulation;
		Self->UnCrouch(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateBasedMovement(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->UpdateBasedMovement(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateBasedRotation(UCharacterMovementComponent* Self, INT_PTR FinalRotation, INT_PTR ReducedRotation)
	{
		auto& _p0 = *(FRotator*)FinalRotation;
		auto& _p1 = *(FRotator*)ReducedRotation;
		Self->UpdateBasedRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateCharacterStateAfterMovement(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->UpdateCharacterStateAfterMovement(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateCharacterStateBeforeMovement(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->UpdateCharacterStateBeforeMovement(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateFloorFromAdjustment(UCharacterMovementComponent* Self)
	{
		Self->UpdateFloorFromAdjustment();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateFromCompressedFlags(UCharacterMovementComponent* Self, uint8 Flags)
	{
		auto _p0 = Flags;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->UpdateFromCompressedFlags_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_VisualizeMovement(UCharacterMovementComponent* Self)
	{
		Self->VisualizeMovement();
	}